// Prisma schema — What2Watch ERD mapping
// Datasource configured for PostgreSQL; set DATABASE_URL in environment when running migrations.

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id               String              @id @default(uuid()) @db.Uuid
  email            String              @unique
  authProvider     String?
  region           String?
  tier             String              @default("free")   // "free" | "premium"
  createdAt        DateTime            @default(now())
  profiles         Profile[]
  planSubscription PlanSubscription?
  referralCodes    ReferralCode[]      @relation("referrer")
  referredBy       ReferralRedemption[] @relation("referred")
}

model Profile {
  id                 String          @id @default(uuid()) @db.Uuid
  userId             String          @db.Uuid
  name               String
  avatarUrl          String?
  preferences        Json?
  privateModeDefault Boolean         @default(false)
  locale             String?
  createdAt          DateTime        @default(now())
  user               User            @relation(fields: [userId], references: [id], onDelete: Cascade)
  subscriptions      Subscription[]
  lists              List[]
  feedback           Feedback[]
  recommendations    Recommendation[]
  alerts                 Alert[]
  deviceTokens           DeviceToken[]
  notificationPreference NotificationPreference?
  friendsFrom            Friend[]        @relation("fromProfile")
  friendsTo              Friend[]        @relation("toProfile")
  groupSessions          GroupSession[]  @relation("hostProfile")
  votes                  Vote[]
}

model Subscription {
  id        String   @id @default(uuid()) @db.Uuid
  profileId String   @db.Uuid
  service   String
  region    String?
  active    Boolean  @default(true)
  createdAt DateTime @default(now())
  profile   Profile  @relation(fields: [profileId], references: [id], onDelete: Cascade)
  @@index([profileId])
}

model Title {
  id            String           @id @default(uuid()) @db.Uuid
  tmdbId        BigInt?          @unique
  imdbId        String?          @unique
  type          String
  name          String
  releaseYear   Int?
  runtimeMin    Int?
  genres        String[]
  moods         String[]
  cast          Json?
  voteAverage   Float?
  popularity    Float?
  posterUrl     String?
  backdropUrl   String?
  createdAt     DateTime         @default(now())
  availability  Availability[]
  listItems     ListItem[]
  feedback      Feedback[]
  recommendations Recommendation[]
  votes         Vote[]
  externalRatings ExternalRating[]
  trending      TrendingSignal[]
  @@index([type])
  @@index([releaseYear])
  @@index([name])
}

model ExternalRating {
  id        String   @id @default(uuid()) @db.Uuid
  titleId   String   @db.Uuid
  source    String   // IMDB | ROTTEN_TOMATOES | METACRITIC
  valueText String
  valueNum  Float?
  updatedAt DateTime @default(now())
  title     Title    @relation(fields: [titleId], references: [id], onDelete: Cascade)
  @@unique([titleId, source])
  @@index([titleId])
}

model Availability {
  id         String   @id @default(uuid()) @db.Uuid
  titleId    String   @db.Uuid
  service    String
  region     String
  offerType  String
  deepLink   String?
  lastSeenAt DateTime?
  title      Title    @relation(fields: [titleId], references: [id], onDelete: Cascade)
  @@unique([titleId, service, region, offerType])
  @@index([titleId])
  @@index([region, service])
  @@index([service])
}

model TrendingSignal {
  id       String   @id @default(uuid()) @db.Uuid
  titleId  String   @db.Uuid
  source   String   // TMDB_DAY | TMDB_WEEK | TRAKT_WEEK
  value    Float
  ts       DateTime @default(now())
  title    Title    @relation(fields: [titleId], references: [id], onDelete: Cascade)
  @@unique([titleId, source])
  @@index([titleId])
}

model Recommendation {
  id         String   @id @default(uuid()) @db.Uuid
  profileId  String   @db.Uuid
  titleId    String   @db.Uuid
  score      Float
  reason     String?
  createdAt  DateTime @default(now())
  profile    Profile  @relation(fields: [profileId], references: [id], onDelete: Cascade)
  title      Title    @relation(fields: [titleId], references: [id], onDelete: Cascade)
  @@index([profileId])
  @@index([profileId, score])
  @@index([titleId])
}

model Feedback {
  id        String   @id @default(uuid()) @db.Uuid
  profileId String   @db.Uuid
  titleId   String   @db.Uuid
  action    String   // LIKE | DISLIKE | SAVE
  reasonOpt String?
  ts        DateTime @default(now())
  profile   Profile  @relation(fields: [profileId], references: [id], onDelete: Cascade)
  title     Title    @relation(fields: [titleId], references: [id], onDelete: Cascade)
  @@index([profileId, titleId])
}

model Alert {
  id               String            @id @default(uuid()) @db.Uuid
  profileId        String            @db.Uuid
  titleId          String?           @db.Uuid
  alertType        String
  services         String[]
  region           String
  priority         String            @default("STANDARD") // "EARLY" | "STANDARD"
  status           String            // ACTIVE | FIRED | CANCELLED
  firedAt          DateTime?
  unsubscribeToken String?           @default(uuid())
  createdAt        DateTime          @default(now())
  profile          Profile           @relation(fields: [profileId], references: [id], onDelete: Cascade)
  notificationLogs NotificationLog[]
  @@unique([profileId, titleId, alertType, region])
  @@index([profileId])
  @@index([status])
}

model DeviceToken {
  id        String   @id @default(uuid()) @db.Uuid
  profileId String   @db.Uuid
  token     String
  platform  String   // IOS | ANDROID | WEB
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  profile   Profile  @relation(fields: [profileId], references: [id], onDelete: Cascade)
  @@unique([profileId, token])
  @@index([profileId])
}

model NotificationPreference {
  id              String    @id @default(uuid()) @db.Uuid
  profileId       String    @unique @db.Uuid
  pushEnabled     Boolean   @default(true)
  emailEnabled    Boolean   @default(false)
  webhookEnabled  Boolean   @default(false)
  quietHoursStart String?
  quietHoursEnd   String?
  frequencyCap    Int       @default(10)
  consentGiven    Boolean   @default(false)
  consentTs       DateTime?
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt
  profile         Profile   @relation(fields: [profileId], references: [id], onDelete: Cascade)
}

model NotificationLog {
  id        String   @id @default(uuid()) @db.Uuid
  alertId   String   @db.Uuid
  profileId String   @db.Uuid
  channel   String   // PUSH | EMAIL | WEBHOOK
  status    String   // SENT | FAILED | SUPPRESSED
  error     String?
  sentAt    DateTime @default(now())
  alert     Alert    @relation(fields: [alertId], references: [id], onDelete: Cascade)
  @@index([alertId])
  @@index([profileId])
  @@index([sentAt])
}

model List {
  id          String    @id @default(uuid()) @db.Uuid
  profileId   String    @db.Uuid
  name        String
  visibility  String    // PRIVATE | FRIENDS | PUBLIC | COLLAB
  description String?
  createdAt   DateTime  @default(now())
  profile     Profile   @relation(fields: [profileId], references: [id], onDelete: Cascade)
  items       ListItem[]
  @@index([profileId])
}

model ListItem {
  id       String @id @default(uuid()) @db.Uuid
  listId   String @db.Uuid
  titleId  String @db.Uuid
  position Int?
  note     String?
  addedAt  DateTime @default(now())
  list     List   @relation(fields: [listId], references: [id], onDelete: Cascade)
  title    Title  @relation(fields: [titleId], references: [id], onDelete: Cascade)
  @@unique([listId, titleId])
  @@index([listId])
  @@index([titleId])
}

model Friend {
  id            String  @id @default(uuid()) @db.Uuid
  fromProfileId String  @db.Uuid
  toProfileId   String  @db.Uuid
  status        String   // REQUESTED | ACCEPTED
  createdAt     DateTime @default(now())
  fromProfile   Profile  @relation("fromProfile", fields: [fromProfileId], references: [id], onDelete: Cascade)
  toProfile     Profile @relation("toProfile", fields: [toProfileId], references: [id], onDelete: Cascade)
  @@index([fromProfileId])
  @@index([toProfileId])
}

model GroupSession {
  id            String   @id @default(uuid()) @db.Uuid
  hostProfileId String   @db.Uuid
  name          String?
  constraints   Json?
  status        String   // open | locked | closed
  fairnessScore Float?
  createdAt     DateTime @default(now())
  hostProfile   Profile  @relation("hostProfile", fields: [hostProfileId], references: [id], onDelete: Cascade)
  votes         Vote[]
}

model Vote {
  id        String   @id @default(uuid()) @db.Uuid
  sessionId String   @db.Uuid
  profileId String   @db.Uuid
  titleId   String   @db.Uuid
  voteValue Int
  ts        DateTime @default(now())
  session   GroupSession @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  profile   Profile      @relation(fields: [profileId], references: [id], onDelete: Cascade)
  title     Title        @relation(fields: [titleId], references: [id], onDelete: Cascade)
  @@index([sessionId])
  @@index([profileId])
}

model PlanSubscription {
  id           String    @id @default(uuid()) @db.Uuid
  userId       String    @unique @db.Uuid
  plan         String    @default("free")   // "free" | "premium"
  status       String    @default("active") // "active" | "trial" | "cancelled" | "expired"
  trialEndsAt  DateTime?
  subscribedAt DateTime?
  cancelledAt  DateTime?
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt
  user         User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  @@index([userId])
}

model ReferralCode {
  id          String               @id @default(uuid()) @db.Uuid
  code        String               @unique
  userId      String               @db.Uuid
  maxUses     Int                  @default(10)
  createdAt   DateTime             @default(now())
  user        User                 @relation("referrer", fields: [userId], references: [id], onDelete: Cascade)
  redemptions ReferralRedemption[]
  @@index([userId])
}

model ReferralRedemption {
  id               String       @id @default(uuid()) @db.Uuid
  referralCodeId   String       @db.Uuid
  redeemedByUserId String       @db.Uuid
  createdAt        DateTime     @default(now())
  referralCode     ReferralCode @relation(fields: [referralCodeId], references: [id], onDelete: Cascade)
  redeemedBy       User         @relation("referred", fields: [redeemedByUserId], references: [id], onDelete: Cascade)
  @@unique([referralCodeId, redeemedByUserId])
  @@index([referralCodeId])
  @@index([redeemedByUserId])
}
