# Whot2Watch GraphQL Schema (MVP)
# This file remains the canonical schema for the docs bundle.

"""
ISO-8601 timestamp in UTC.
"""
scalar DateTime

"""
Regions supported for content availability (PRD currently specifies US).
TODO: Expand once ERD lists all regions.
"""
enum Region {
  US
  CA
  GB
  AU
  IN
}

"""
Streaming services supported (PRD examples).
TODO: Expand based on ERD/catalog (e.g., DISNEY, HULU, MAX, APPLETV, etc.).
"""
enum Service {
  NETFLIX
  AMAZON_PRIME_VIDEO
  DISNEY_PLUS
  HULU
  MAX
  APPLE_TV_PLUS
  PARAMOUNT_PLUS
  PEACOCK
  CRUNCHYROLL
  TUBI
  YOUTUBE
  OTHER
}

"""
Visibility for user-created lists.
"""
enum ListVisibility {
  PRIVATE
  FRIENDS
  PUBLIC
  COLLAB
}

"""
Alert types supported for notifications.
"""
enum AlertType {
  AVAILABILITY
  NEW_SEASON
  ACTOR
  GENRE
}

"""
Feedback actions a user can take on a title.
"""
enum FeedbackAction {
  LIKE
  DISLIKE
  SAVE
}

"""
Friend request status codes.
TODO: The PRD only shows REQUESTED and ACCEPTED; REJECTED added for completeness.
"""
enum TitleType {
  MOVIE
  SHOW
}

"""
The type of availability offer for a title.
"""
enum OfferType {
  SUBSCRIPTION
  RENT
  BUY
  FREE
}

"""
Lifecycle state of an alert.
"""
enum AlertStatus {
  ACTIVE
  FIRED
  CANCELLED
}

"""
Friend relationship status.
"""
enum FriendStatus {
  REQUESTED
  ACCEPTED
}

"""
Group session lifecycle status.
"""
enum GroupSessionStatus {
  OPEN
  LOCKED
  CLOSED
}

"""
User subscription tier for freemium gating.
"""
enum UserTier {
  FREE
  PREMIUM
}

"""
Generic identifier alias for clarity in fields.
"""
scalar ID

"""
A piece of content (movie, series, etc.). TODO: refine fields per ERD.
"""
type Title {
  id: ID!
  name: String!
  type: TitleType!
  releaseYear: Int
  runtimeMin: Int
  genres: [String!]!
  moods: [String!]
  posterUrl: String
  backdropUrl: String
  overview: String
  voteAverage: Float
  popularity: Float
  availability(region: Region, services: [Service!]): [Availability!]!
  topCast(limit: Int = 3): [String!]
}

"""
Availability of a title on a specific service/region.
"""
type Availability {
  service: Service!
  region: Region!
  offerType: OfferType!
  deepLink: String
  lastSeenAt: DateTime
}

"""
Curated or algorithmic pick presented to a profile.
"""
type Pick {
  id: ID!
  title: Title!
  score: Float
  reason: String
  createdAt: DateTime!
}

"""
Search result item (lightweight projection of Title).
"""
type SearchItem {
  id: ID!
  name: String!
  type: TitleType!
  releaseYear: Int
  runtimeMin: Int
  genres: [String!]!
  moods: [String!]
  posterUrl: String
  backdropUrl: String
  overview: String
  voteAverage: Float
  popularity: Float
  availability: [Availability!]!
}

"""
Cursor-paginated search results.
"""
type SearchResultConnection {
  items: [SearchItem!]!
  nextCursor: String
}

"""
User feedback on a title.
"""
type Feedback {
  id: ID!
  profileId: ID!
  titleId: ID!
  action: FeedbackAction!
  reasonOpt: String
  ts: DateTime!
}

"""
User preferences stored at the profile level.
"""
type Preferences {
  genres: [String!]!
  dislikedGenres: [String!]!
  moods: [String!]!
  languages: [String!]!
  runtimePreferredMin: Int
  runtimePreferredMax: Int
}

"""
Input for updating profile preferences.
"""
input PreferencesInput {
  genres: [String!]
  dislikedGenres: [String!]
  moods: [String!]
  languages: [String!]
  runtimePreferredMin: Int
  runtimePreferredMax: Int
}

"""
Profile with preferences.
"""
type Profile {
  id: ID!
  preferences: Preferences
  locale: String
  tier: UserTier
}

"""
A user-created list of titles.
"""
type List {
  id: ID!
  profileId: ID!
  name: String!
  visibility: ListVisibility!
  description: String
  items: [ListItem!]!
  createdAt: DateTime!
}

"""
An item within a List.
"""
type ListItem {
  id: ID!
  listId: ID!
  title: Title!
  position: Int
  addedAt: DateTime!
  note: String
}

"""
Subscription to a streaming service in a region.
"""
type Subscription {
  id: ID!
  profileId: ID!
  service: Service!
  region: Region!
}

"""
Alert configuration for availability or other triggers.
"""
type Alert {
  id: ID!
  profileId: ID!
  titleId: ID
  alertType: AlertType!
  services: [Service!]
  region: Region!
  priority: String!
  status: AlertStatus!
  firedAt: DateTime
  unsubscribeToken: String
  createdAt: DateTime!
}

"""
Platform for push notification device tokens.
"""
enum DeviceTokenPlatform {
  IOS
  ANDROID
  WEB
}

"""
A registered device token for push notifications.
"""
type DeviceToken {
  id: ID!
  profileId: ID!
  token: String!
  platform: DeviceTokenPlatform!
  createdAt: DateTime!
}

"""
Notification channel types.
"""
enum NotificationChannel {
  PUSH
  EMAIL
  WEBHOOK
}

"""
User notification preferences per profile.
"""
type NotificationPreference {
  id: ID!
  profileId: ID!
  pushEnabled: Boolean!
  emailEnabled: Boolean!
  webhookEnabled: Boolean!
  quietHoursStart: String
  quietHoursEnd: String
  frequencyCap: Int!
  consentGiven: Boolean!
  consentTs: DateTime
}

"""
Input for updating notification preferences.
"""
input NotificationPreferenceInput {
  pushEnabled: Boolean
  emailEnabled: Boolean
  webhookEnabled: Boolean
  quietHoursStart: String
  quietHoursEnd: String
  frequencyCap: Int
  consentGiven: Boolean
}

"""
Summary of an availability delta detection run.
"""
type DeltaRunSummary {
  titlesScanned: Int!
  deltasFound: Int!
  notificationsSent: Int!
  duration: String!
}

"""
Friend request between profiles.
"""
type Friend {
  id: ID!
  fromProfileId: ID!
  toProfileId: ID!
  status: FriendStatus!
  createdAt: DateTime
}

"""
A single activity in the social feed (friend liked/saved a title).
"""
type FeedItem {
  id: ID!
  profileId: ID!
  profileName: String!
  profileAvatarUrl: String
  action: FeedbackAction!
  title: Title!
  ts: DateTime!
}

"""
A title popular among friends, with aggregated friend count.
"""
type FriendsPickItem {
  title: Title!
  friendCount: Int!
  friendNames: [String!]!
  latestTs: DateTime!
}

"""
Constraints used during a group session (e.g., runtime and services).
"""
type GroupSessionConstraints {
  runtimeLt: Int
  services: [Service!]
}

"""
Input constraints used to filter candidates in a group session.
"""
input GroupSessionConstraintsInput {
  runtimeLt: Int
  services: [Service!]
}

"""
A collaborative group watch decision session.
"""
type GroupSession {
  id: ID!
  hostProfileId: ID!
  name: String!
  status: GroupSessionStatus!
  constraints: GroupSessionConstraints
  fairnessScore: Float
  createdAt: DateTime!
}

"""
A vote cast in a group session.
"""
type Vote {
  id: ID!
  sessionId: ID!
  profileId: ID!
  titleId: ID!
  value: Int!
  ts: DateTime!
}

"""
NLU parsing result (Phase 2 — intent classification).
"""
type NluParseResult {
  intent: String
  entities: [String!]
  confidence: Float
}

"""
NLU search response (Phase 2).
"""
type NluSearchResult {
  parse: NluParseResult
  results: SearchResultConnection
  relaxed: Boolean
  relaxNotes: String
}

"""
Duration range constraint extracted from a query.
"""
type DurationRange {
  min: Int
  max: Int
}

"""
Year range constraint extracted from a query.
"""
type YearRange {
  min: Int
  max: Int
}

"""
Structured entities extracted from a natural-language search query.
"""
type ExtractedEntities {
  genres: [String!]
  services: [String!]
  moods: [String!]
  titles: [String!]
  duration: DurationRange
  releaseYear: YearRange
  region: String
}

"""
Search bar NLU augment result — parsed entities + cleaned query.
"""
type NluSearchBarResult {
  originalQuery: String!
  cleanQuery: String!
  entities: ExtractedEntities!
}

# Queries

"""
Entry point for read operations.
"""
type Query {
  """
  Return picks for a profile.
  """
  picks(profileId: ID!, limit: Int = 5): [Pick!]!

  """
  Search titles with optional provider/region/runtime filters.
  """
  search(
    q: String!
    region: Region!
    providerIn: [Service!]
    runtimeLt: Int
    first: Int = 20
    after: String
  ): SearchResultConnection!

  """
  Get availability for a title in a region/services.
  """
  availability(titleId: ID!, region: Region!, services: [Service!]): [Availability!]!

  """
  NLU search (Phase 2).
  """
  nluSearch(q: String!, profileId: ID!, first: Int = 20, after: String): NluSearchResult

  """
  Parse a natural-language query into structured entities for search bar augment.
  """
  nluParse(q: String!): NluSearchBarResult

  """
  Get a single list by ID with items and title details.
  """
  list(id: ID!): List

  # Read/List queries
  lists(
    profileId: ID!
    visibility: ListVisibility
    first: Int = 20
    after: String
  ): SearchResultConnection!
  alerts(
    profileId: ID!
    status: AlertStatus
    first: Int = 20
    after: String
  ): SearchResultConnection!
  subscriptions(profileId: ID!): [Subscription!]!
  friends(profileId: ID!, status: FriendStatus, first: Int = 50): [Friend!]!
  socialFeed(profileId: ID!, limit: Int = 20, before: DateTime): [FeedItem!]!
  friendsPicks(profileId: ID!, days: Int = 14, limit: Int = 10): [FriendsPickItem!]!
  groupSessions(
    hostProfileId: ID
    participantProfileId: ID
    status: GroupSessionStatus
    first: Int = 20
    after: String
  ): SearchResultConnection!

  # Plans (Epic 9)
  planStatus(userId: ID!): PlanStatus!

  # Affiliates (Epic 9)
  affiliateDisclosure: AffiliateDisclosure!

  # Social Analytics (Epic 9)
  socialAnalytics(profileId: ID!): SocialAnalytics

  # Referrals (Epic 9)
  referralStats(userId: ID!): ReferralStats

  # B2B (Epic 9)
  demoDashboard: DemoDashboard

  # Notifications (Epic 5)
  notificationPreferences(profileId: ID!): NotificationPreference
}

# Mutations

"""
Entry point for write operations.
"""
type Mutation {
  """
  Give feedback on a title.
  """
  giveFeedback(profileId: ID!, titleId: ID!, action: FeedbackAction!, reasonOpt: String): Feedback!

  # Lists
  createList(profileId: ID!, name: String!, visibility: ListVisibility!, description: String): List!
  addListItem(listId: ID!, titleId: ID!, note: String, position: Int): ListItem!
  deleteListItem(listId: ID!, itemId: ID!): Boolean!

  # Subscriptions & Preferences
  createSubscription(profileId: ID!, service: Service!, region: Region!): Subscription!
  deleteSubscription(id: ID!): Boolean!
  updateProfilePreferences(id: ID!, preferences: PreferencesInput!): Profile!

  # Alerts
  createAlert(
    profileId: ID!
    titleId: ID
    alertType: AlertType!
    services: [Service!]
    region: Region!
  ): Alert!
  deleteAlert(id: ID!): Boolean!

  # Social & Group Night
  sendFriendRequest(profileId: ID!, toProfileId: ID!): Friend!
  respondFriendRequest(id: ID!, accept: Boolean!): Friend!

  createGroupSession(
    hostProfileId: ID!
    name: String!
    constraints: GroupSessionConstraintsInput
  ): GroupSession!
  addGroupSessionCandidate(id: ID!, titleId: ID!): Boolean!
  voteGroupSession(id: ID!, profileId: ID!, titleId: ID!, value: Int!): Vote!
  closeGroupSession(id: ID!): GroupSession!

  # Plans (Epic 9)
  subscribePlan(userId: ID!): PlanStatus!
  cancelPlan(userId: ID!): PlanStatus!
  startTrial(userId: ID!): PlanStatus!

  # Referrals (Epic 9)
  generateReferralCode(userId: ID!): ReferralCodeResult!
  redeemReferralCode(code: String!, redeemedByUserId: ID!): ReferralRedeemResult!

  # Notifications (Epic 5)
  registerDeviceToken(profileId: ID!, token: String!, platform: DeviceTokenPlatform!): DeviceToken!
  updateNotificationPreferences(profileId: ID!, input: NotificationPreferenceInput!): NotificationPreference!
  unsubscribeAlert(alertId: ID!, token: String!): Boolean!
}

# ── Epic 9: Monetization & Growth Types ──────────────────────────────────────

"""
Current plan status for a user.
"""
type PlanStatus {
  plan: String!
  status: String!
  trialEndsAt: DateTime
  subscribedAt: DateTime
  cancelledAt: DateTime
  features: [String!]!
}

"""
Affiliate disclosure information.
"""
type AffiliateDisclosure {
  enabled: Boolean!
  text: String
}

"""
Social analytics for premium users.
"""
type SocialAnalytics {
  topGenresAmongFriends: [GenreCount!]!
  friendsWatchingNow: Int!
  sharedTitles: Int!
  topServicesAmongFriends: [ServiceCount!]!
}

"""
Genre with occurrence count among friends.
"""
type GenreCount {
  genre: String!
  count: Int!
}

"""
Streaming service with occurrence count among friends.
"""
type ServiceCount {
  service: String!
  count: Int!
}

"""
Referral code result.
"""
type ReferralCodeResult {
  code: String!
  userId: ID!
  maxUses: Int!
  redemptions: Int!
}

"""
Referral redemption result.
"""
type ReferralRedeemResult {
  success: Boolean!
}

"""
Referral statistics for a user.
"""
type ReferralStats {
  code: String
  totalReferred: Int!
  activeReferred: Int!
}

"""
Demo dashboard stats for B2B.
"""
type DemoDashboard {
  totalUsers: Int!
  premiumUsers: Int!
  totalReferrals: Int!
  topTrending: [TrendingItem!]!
  ingestSuccessRate: Float!
  availabilityFreshnessHours: Float!
  ratingsCoveragePercent: Float!
  activeAlerts: Int!
  firedAlerts24h: Int!
  notificationsSent24h: Int!
  deviceTokenCount: Int!
}

"""
Trending title with composite score.
"""
type TrendingItem {
  name: String!
  score: Float!
}
