erDiagram
  USERS ||--o{ PROFILES : has

  PROFILES {
    uuid id PK
    string locale
  }

  LISTS {
    uuid id PK
    uuid profileId FK
    string name
    string visibility
    datetime createdAt
  }

  ALERTS {
    uuid id PK
    uuid profileId FK
    string alertType
    string region
    string status
    datetime createdAt
  }

  SUBSCRIPTIONS {
    uuid id PK
    uuid profileId FK
    string service
    string region
  }

  FRIENDS {
    uuid id PK
    uuid fromProfileId FK
    uuid toProfileId FK
    FriendStatus status
  }

  GROUP_SESSIONS {
    uuid id PK
    uuid hostProfileId FK
    string name
    string status
    datetime createdAt
  }

  DEVICE_TOKENS {
    uuid id PK
    uuid profileId FK
    string token
    string platform
    datetime createdAt
  }

  NOTIFICATION_PREFERENCES {
    uuid id PK
    uuid profileId FK
    boolean pushEnabled
    boolean emailEnabled
    boolean webhookEnabled
    string quietHoursStart
    string quietHoursEnd
    int frequencyCap
    boolean consentGiven
    datetime consentTs
  }

  NOTIFICATION_LOG {
    uuid id PK
    uuid alertId FK
    uuid profileId FK
    string channel
    string status
    string error
    datetime sentAt
  }

  PROFILES ||--o{ LISTS : owns
  PROFILES ||--o{ ALERTS : sets
  PROFILES ||--o{ SUBSCRIPTIONS : has
  PROFILES ||--o{ FRIENDS : relates
  PROFILES ||--o{ GROUP_SESSIONS : hosts
  PROFILES ||--o{ DEVICE_TOKENS : registers
  PROFILES ||--o| NOTIFICATION_PREFERENCES : configures
  ALERTS ||--o{ NOTIFICATION_LOG : triggers

  FriendStatus {
    REQUESTED
    ACCEPTED
  }
